--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vsui",
+  "name": "viewshareui",
   "version": "2.8.0",
   "title": "vsui",
   "description": "component library built on vue.js",
@@ -23,17 +23,16 @@
     "dist": "npm run dist:style && npm run dist:dev && npm run dist:prod && npm run dist:locale",
     "lint": "eslint --fix --ext .js,.vue src",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "test": "npm run lint && npm run unit",
-    "prepublish": "npm run dist"
+    "test": "npm run lint && npm run unit"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Keecat/vsui"
+    "url": "https://github.com/Keecat/viewshareui"
   },
   "author": "Keecat",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Keecat/vsui/issues"
+    "url": "https://github.com/Keecat/viewshareui/issues"
   },
   "dependencies": {
     "async-validator": "^1.8.2",
