--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.8.0",
   "title": "vsui",
   "description": "component library built on vue.js",
-  "homepage": "https://github.com/Keecat/vsui",
+  "homepage": "https://github.com/Keecat/viewshareui",
   "keywords": [
     "vsui",
     "vue",
